--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "chai": "^2.3.0",
     "istanbul": "git://github.com/gotwarlost/istanbul#65c58a668f016296bc1a85ee6eb457cd6c8b80f8",
+    "closest-package": "^1.0.0",
     "mocha": "^2.2.4",
     "streamline": "git://github.com/Sage/streamlinejs#1614cf065896411ff959083fd4feaada104d0a59",
     "supertest": "^0.15.0"
