--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "istanbul": "^0.3.14",
     "mocha": "^2.2.4",
     "streamline": "git://github.com/Sage/streamlinejs#1614cf065896411ff959083fd4feaada104d0a59",
-    "supertest": "^0.15.0"
+    "supertest": "^0.15.0",
+    "supports-color": "^1.3.1"
   },
   "//": [
     "waiting for streamline 0.12.2"
